Refactor tests compatibility for java 8